@@ -18,7 +18,6 @@ import org.griphyn.vdl.model.Argument;
 import org.griphyn.vdl.model.Array;
 import org.griphyn.vdl.model.Assign;
 import org.griphyn.vdl.model.Binding;
-import org.griphyn.vdl.model.Break;
 import org.griphyn.vdl.model.Call;
 import org.griphyn.vdl.model.Continue;
 import org.griphyn.vdl.model.Dataset;
@@ -334,7 +333,6 @@ public class Karajan {
 				switchStat(switchstat, st);
 			} else if (child instanceof Procedure
 				|| child instanceof Types
-				|| child instanceof Break
 				|| child instanceof Continue
 				|| child instanceof FormalParameter) {
 				// ignore these - they're expected but we don't need to
