@@ -6,7 +6,6 @@
       <call proc="f">
         <input>g</input>
       </call>
-      <break/>
     </case>
     <case value="5">
       <assign to="j">7</assign>
@@ -14,7 +13,6 @@
         <output>uuu</output>
         <input>t + 7 + e + 3 * 2</input>
       </call>
-      <break/>
     </case>
     <default>
       <assign to="s">&quot;the default&quot;</assign>
