@@ -3,11 +3,9 @@ switch(d)
 {
     case 1:
      f(g);
-     break;
     case 5:
      j=7;
      uuu=fn(t+7+e+3*2);
-     break;
     default:
      s="the default";
 }
